# djust-mobile-toga

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  native-bridges.md  platform-support.md
examples/counter/: README.md  pyproject.toml
examples/counter/src/counter_demo/: __init__.py  __main__.py  app.py  asgi.py  routing.py  settings.py  urls.py  views.py
examples/counter/src/counter_demo/templates/: counter.html
examples/showcase/: README.md  pyproject.toml
examples/showcase/src/showcase/: __init__.py  __main__.py  app.py  asgi.py  routing.py  settings.py  urls.py  views.py
examples/showcase/src/showcase/templates/: showcase.html
src/djust_mobile_toga/: __init__.py  app.py  apple_intelligence.py  apps.py  bridge.py  notifications.py  passkit.py  serve.py  shims.py  voice.py
src/djust_mobile_toga/templatetags/: djust_mobile_toga.py
tests/: conftest.py  test_apple_intelligence.py  test_apps.py  test_bridge.py  test_notifications.py  test_passkit.py  test_serve.py  test_shims.py  test_templatetags.py  test_voice.py
